# NativeSolid

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  INSTALL.txt  RBMConf.cfg  README.md  Template_config_CSD.cfg
.github/workflows/: build-test.yml
CMake/: FindCBLAS.cmake  FindLAPACKE.cmake  ubuntu.cmake
_api/: CMakeLists.txt  Native.i
_src/: CMakeLists.txt  Native.i
api/: NativeSolid_API.cpp  NativeSolid_API.h  main.cpp
include/: MatVec.h  MatVec.hpp  Native.h  Native.hpp  config.h  config.hpp  geometry.h  integration.h  integration.hpp  output.h  output.hpp  solver.h  structure.h  structure.hpp
src/: CMakeLists.txt  Config.cpp  Geometry.cpp  Geometry.h  Integration.cpp  Integration.h  MatVec.cpp  MatVec.h  Native.cpp  NativeSolidSolver.cpp  NativeSolidSolver.h  NativeSolid_API.cpp  NativeSolid_API.h  Output.cpp  Output.h  Solver.cpp  Solver.h  Structure.cpp  Structure.h  config.cpp  geometry.cpp  integration.cpp  integration.h  main.cpp  output.cpp  solver.cpp  structure.cpp  testcvector.cpp
tests/: CMakeLists.txt
