ADD_EXECUTABLE(TestCVector testcvector.cpp)
TARGET_INCLUDE_DIRECTORIES(TestCVector PRIVATE ${PROJECT_SOURCE_DIR}/src)
TARGET_LINK_LIBRARIES(TestCVector Native)

ADD_TEST(NAME TestCVector COMMAND ${EXECUTABLE_OUTPUT_PATH}/TestCVector
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
                          